--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "scraps",
   "version": "1.0.0",
   "description": "Small js applications (games, visual effects, etc.) created for practice.",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Fustran/Scraps.git"
+    "url": "git+https://github.com/Fustran/scraps.git"
   },
   "author": "Josh Fangrad",
   "license": "MIT",
